# Ordo

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  test_typer.py  verify_implementation.py
.github/: GITHUB_PROJECT_WORKFLOW.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore-maintenance.md  config.yml  feature-user-story.md
.github/workflows/: ci.yml
docs/: architecture.md  core_api_project_brief.md  prd.md  quickstart.md  ux_recommendations.md
docs/architecture/: 1-introduction.md  10-infrastructure-and-deployment-v2-refined.md  11-error-handling-strategy-v2-refined.md  12-coding-standards-ordo-project.md  13-test-strategy-and-standards-v3-final.md  14-security-specification-v2-refined.md  2-high-level-architecture.md  3-tech-stack.md  4-data-model-strategy.md  5-components.md  6-external-apis.md  7-core-workflows.md  8-database-schema.md  9-source-tree.md  index.md
docs/prd/: 1-goals-and-background-context.md  2-requirements.md  3-technical-assumptions.md  4-product-backlog.md  index.md
docs/stories/: story-0.1.md  story-0.2.md  story-0.3.md  story-1.1.md  story-1.2.md  story-1.3.md  story-1.3a.md  story-1.3b.md  story-1.4.md  story-1.5.md  story-1.6.md  story-2.1.md  story-2.10.md  story-2.2.md  story-2.3.md  story-2.4.md  story-2.5.md  story-2.6.md  story-2.7.5.md  story-2.7.md  story-2.8.md  story-2.9.md  story-3.1.md  story-3.10.md  story-3.2.md  story-3.3.md  story-3.4.md  story-3.5.md  story-3.6.md  story-3.8.md  story-3.9.md
scripts/: otp_cli.py
src/ordo/: config.py  exceptions.py  main.py
tests/: test_config.py
tests/adapters/: test_fyers.py  test_hdfc.py  test_mock.py
tests/core/: test_api_integration.py  test_orchestrator.py
tests/scripts/: test_otp_cli.py
tests/security/: test_authentication.py  (+1 more)
(+22 files in other folders)
