[project]
name = "ordo"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "typer (>=0.19.2,<0.20.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.4.0,<5.0.0)",
    "email-validator (>=2.3.0,<3.0.0)"
]

[tool.poetry]
packages = [
    {include = "ordo", from = "src"},
    {include = "scripts"},
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.13.1,<0.14.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "respx (>=0.22.0,<0.23.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-mock (>=3.12.0,<4.0.0)"
]

[tool.pytest.ini_options]
markers = [
    "unit: marks a test as a unit test.",
    "integration: marks a test as an integration test.",
]
